# blog-streamlit-wifi-on-ice

./: README.md  pyproject.toml
app/: wifi_on_ice_app.py
