[tool.poetry]
name = "wifi-on-ice"
version = "0.1.0"
description = ""
authors = ["mwirsching <marie-kristin.wirsching@inovex.de>"]
readme = "README.md"
packages = [{include = "wifi_on_ice"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.22.0"
plotly = "^5.9.0"
pydeck = "^0.7.1"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
